adaptação para o novo banco de dados
