# api/routes/agendamentos.routes.js
@@ -11,6 +11,6 @@ const { escritorioValido } = require("../models/middlewares");
 router.get("/:id_usuario", listarAgendamentos);
 router.post("/", criarAgendamento);
 router.patch("/:id_escritorio", escritorioValido, alterarAgendamento);
-router.delete("/:id_escritorio/:id_agendamento", escritorioValido, excluirAgendamento);
+router.delete("/:id_agendamento", excluirAgendamento);
 
 module.exports = router;
